Revision history for Perl distribution Convert-Pheno

0.20 2024-XX-XXT00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Encapsulated Default values in Deafult.pm
 - Refactored REDCap.pm code to be used with CSV.pm
 - Implemented basic CSV(in) conversion

0.19 2024-04-24T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated how to obtain nproc for FreeBSD
 - Moved t/{ohdsi,protobuff}.t to xt/
 - Added experimental -ojsond (JSON-LD) (to be used with -i{bff|pxf}
 - Extended Unicode support
 - Separated Windows builds into a distinct workflow due to JSONLD dependency issues
 - Dynamically load JSONLD module with require (if installed)

0.18 2024-02-29T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated resources in PXF.pm
 - Added info.REDCap_columns to REDCap.pm
 - Renamed keys in REDCap mapping (schema|src|files):
   o radio -> selector
   o dict  -> dictionary 
   o map   -> mapping
 - Added info.convertPheno to individuals.json
 - Added project.version to mapping (schema|src|files)
 - Refactored CSV.pm and IO.pm to IO::CSVHandler and IO::FileIO
 - Implemented -o{csv,jsonf} (to be used with -i{bff|pxf}

0.17 2024-02-03T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Fixed typo in _info.VISIT_OCCURENCE -> _info.VISIT_OCCURRENCE

0.16 2023-12-26T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Implemented restriction on I/O format duplication (ibff->obff)

0.15 2023-11-30T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Changed 'windows-latest' to 'windows-2019' in GHA build-and-test.yml
 - Refactored .pm to improve readibility and maintanability

0.14 2023-11-21T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Fixed error on pxf.{json,yaml} @pxf-tools-cli examples (v1.0.0-RC3)
   o label": "Vitamin E" -> label": "atorvastatin"

0.13 2023-09-12T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Pushing new version after passing all tests

0.12_3 2023-09-12T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Added support for Windows Server OS