@@ -2,9 +2,10 @@ Revision history for Perl distribution Convert-Pheno
 
 0.20 2024-XX-XXT00:00:00Z (Manuel Rueda <mrueda@cpan.org>)
 
- - Encapsulated Default values in Deafult.pm
+ - Encapsulated Default values in Default.pm
  - Refactored REDCap.pm code to be used with CSV.pm
- - Implemented basic CSV(in) conversion
+ - Implemented basic <csv2bff> and  <csv2pxf> conversions (experimental)
+ - Required properties in mappinf file now only are 'project','id' and 'sex'
 
 0.19 2024-04-24T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)
 
